--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 Data screams
 ===
-voidsum [FILE1] [FILE2]..
+find node_modules/ -type f | xargs voidsum
+voidsum Gruntfile
 echo bundle exec | voidsum
